--- a/Scalar-Constant/Changes
+++ b/Scalar-Constant/Changes
@@ -1,5 +1,8 @@
 Revision history for Scalar::Constant 
 
+0.001.003  Sun Jan  22 2012
+       Fixed https://rt.cpan.org/Public/Bug/Display.html?id=73488
+
 0.001.002  Tue Jul  7 2009
        Recovered most of the docs.
 
